schedule: colour lunch breaks distinctly; drop recent-hours average
Lunch breaks in each week-view cell now render as an amber pill instead of
sharing the grey of the total-hours line, so the break reads apart from the
shift span and the total.

Also removes the never-shipped recent-hours average (feature #4). It restated
the engine's per-week 37-40h guarantee and flagged rounded 37h rows red, which
read as a bug. Reverts EmployeeController, EmployeeDetailDto, types.ts, and
EmployeesPage to no-hours; deletes decision 026.